@@ -3,6 +3,9 @@ amaroK ChangeLog
 (c) 2002-2004 the amaroK authors.
 
 
+  ADD: CollectionDB now caches and rescales images. This binds cover art usage
+       in amaroK to the collection, but offers greatly improved speed for cover
+       retrieval and uses less memory.
   FIX: Cover not shown in ContextBrowser, when song gets played for the first
        time ever (BR 81241).
   ADD: Cover art fetcher, downloads album cover images from amazon.com.
